--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -111,7 +111,6 @@
         float: left;
         width: 41%;
         padding: 0 20px 20px 30px;
-        text-align: right;
       }
       .timeline-image {
         left: 50%;
@@ -175,4 +174,7 @@
       }
     }
   }
+}
+.about-sub-title{
+  margin:10px 0
 }
