--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -3,7 +3,7 @@ header.masthead {
  
   text-align: center;
   color: white;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/banner.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
